Prevent articles with short content from collapsing

--- a/apps/www/styles/editorial/crosslink.scss
+++ b/apps/www/styles/editorial/crosslink.scss
@@ -64,6 +64,10 @@
     }
   }
 
+  .details {
+    flex-grow: 1;
+  }
+
   .read-more {
     font-weight: bold;
   }
